[package]
name = "wasmi"
version = "0.4.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/wasmi"
documentation = "https://paritytech.github.io/wasmi/"
description = "WebAssembly interpreter"
keywords = ["wasm", "webassembly", "bytecode", "interpreter"]
exclude = [ "/res/*", "/tests/*", "/fuzz/*", "/benches/*" ]

[features]
default = ["std"]
# Disable for no_std support
std = ["parity-wasm/std", "byteorder/std", "nan-preserving-float/std"]

[dependencies]
parity-wasm = { version = "0.31", default-features = false }
byteorder = { version = "1.0", default-features = false }
memory_units = "0.3.0"
nan-preserving-float = { git = "https://github.com/jrakow/nan-preserving-float", revision = "6582615d695527adf17bdd7d79895b300859444b", default-features = false }

[dev-dependencies]
assert_matches = "1.1"
wabt = "0.4"
